tests/baselines/reference/noCommonSupertypeTypeInferenceMatchesReporting.errors.txt
tests/cases/compiler/noCommonSupertypeTypeInferenceMatchesReporting.ts(4,5): error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
  Type argument candidate '12 | undefined' is not a valid type argument because it is not a supertype of candidate 'number'.
tests/cases/compiler/noCommonSupertypeTypeInferenceMatchesReporting.ts(5,5): error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
  Type argument candidate 'number' is not a valid type argument because it is not a supertype of candidate '12 | undefined'.
    Type 'undefined' is not assignable to type 'number'.


==== tests/cases/compiler/noCommonSupertypeTypeInferenceMatchesReporting.ts (2 errors) ====
    // Fixes #15116, which asserted on line 5 but not 6
    declare function f<T>(a: T, b: T): boolean;
    function g(gut: { n: 12 | undefined }) {
        f(gut.n, 12); // ok, T = number | undefined
        ~
!!! error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
!!! error TS2453:   Type argument candidate '12 | undefined' is not a valid type argument because it is not a supertype of candidate 'number'.
        f(12, gut.n); // ok, T = number | undefined
        ~
!!! error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
!!! error TS2453:   Type argument candidate 'number' is not a valid type argument because it is not a supertype of candidate '12 | undefined'.
!!! error TS2453:     Type 'undefined' is not assignable to type 'number'.
    }
    